SFUSA/force-app/main/default/objects/State__c/fields/Alias__c.field-meta.xml
<CustomField>
        <fullName>Alias__c</fullName>
        <description>PS-MC-SB-25 It is use to represent abbreviation for state name.</description>
        <label>Alias</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>