SFUSA/force-app/main/default/objects/State__c/fields/Country__c.field-meta.xml
<CustomField>
        <fullName>Country__c</fullName>
        <description>PS-MC-SB-25 It is use to represent Country for State</description>
        <label>Country</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Country__c.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>States</relationshipLabel>
        <relationshipName>States</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>