SFUSA/force-app/main/default/objects/State__c/fields/IsActive__c.field-meta.xml
<CustomField>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>PS-MC-SB-25 It is use to represent is region is active/inactive</description>
        <inlineHelpText>It should be checked while creating a state.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </CustomField>