SFUSA/force-app/main/default/objects/State__c/fields/State_Manager__c.field-meta.xml
<CustomField>
        <fullName>State_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PS-MC-SB-25 It is use to manage State manager of state</description>
        <label>State Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>States</relationshipName>
        <type>Lookup</type>
    </CustomField>