SFUSA/force-app/main/default/objects/State__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>IsActive__c</columns>
        <columns>Alias__c</columns>
        <columns>State_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>